@@ -2,10 +2,8 @@ package com.projetodevwevavancado.emprestimo.service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 
@@ -19,10 +17,8 @@ import com.projetodevwevavancado.emprestimo.repository.UserRepository;
 @Service
 public class UserService {
 
-	@Autowired
 	private UserRepository userRepository;
 
-	@Autowired
 	private ModelMapper modelMapper;
 
 	public UserResponseDTO userEntityToUserResponseDTO(UserEntity userEntity) {
@@ -32,7 +28,7 @@ public class UserService {
 	public List<UserResponseDTO> listAll() {
 		List<UserEntity> entities = userRepository.findAll();
 
-		return entities.stream().map(this::userEntityToUserResponseDTO).collect(Collectors.toList());
+		return entities.stream().map(this::userEntityToUserResponseDTO).toList();
 	}
 
 	public Optional<UserEntity> findById(Long id) {
